# esp32-dual-firmware-template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_and_flash.sh  build_flash_ex.sh  sdkconfig.defaults  sdkconfig.fw_a  sdkconfig.fw_b
bootloader_components/main/: CMakeLists.txt  Kconfig  bootloader_start.c
build_fw_a/: .ninja_deps  .ninja_log  app-flash_args  config.env  flash_args  flasher_args.json  kconfigs.in  ldgen_libraries  ldgen_libraries.in  project_description.json  x509_crt_bundle.S
build_fw_a/bootloader/: build.ninja  config.env  kconfigs.in  kconfigs_projbuild.in  project_description.json
build_fw_a/bootloader-prefix/src/bootloader-stamp/: bootloader-source_dirinfo.txt
build_fw_a/bootloader-prefix/tmp/: bootloader-cfgcmd.txt  bootloader-mkdirs.cmake
build_fw_a/bootloader/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
build_fw_a/bootloader/gdbinit/: gdbinit  symbols
build_fw_a/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
build_fw_a/gdbinit/: gdbinit  symbols
build_fw_a/log/: idf_py_stderr_output_1314  idf_py_stdout_output_1314  idf_py_stdout_output_1723
components/boot_ctrl/: CMakeLists.txt  boot_ctrl.cpp
components/boot_ctrl/include/: boot_ctrl.hpp
components/etl/: CMakeLists.txt  idf_component.yml
components/expected/: CMakeLists.txt  idf_component.yml
components/expected/include/: expected.hpp
components/health_monitor/: CMakeLists.txt  health_monitor.cpp
components/health_monitor/include/: health_monitor.hpp
components/jsmn/: CMakeLists.txt  idf_component.yml
components/net_cmd/: CMakeLists.txt  http_cmd.cpp  mqtt_cmd.cpp
components/net_cmd/include/: net_cmd.hpp
components/ota_manager/: CMakeLists.txt  ota_manager.cpp
components/ota_manager/include/: ota_manager.hpp
docs/: sign_firmware.py
firmware_a/: CMakeLists.txt  app_main.cpp  idf_component.yml  wifi.cpp  wifi.hpp  wifi_manager.cpp
firmware_b/: CMakeLists.txt  app_main.cpp  idf_component.yml  wifi.cpp  wifi_manager.hpp
partitions/: partitions.csv  partitions.old.csv
scripts/: .gitignore  ota_server.py
